BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Contract_Signer_HCPTS__c.object
<CustomObject>
    <description>Each Record will represent one signer that must be added to a given contract</description>
    <fields>
        <fullName>Activity_Service_Provider__c</fullName>
        <label>Activity Service Provider</label>
        <referenceTo>EM_Event_Speaker_vod__c</referenceTo>
        <relationshipLabel>Contract Signers</relationshipLabel>
        <relationshipName>Contract_Signers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entity_Name_HCPTS__c</fullName>
        <label>Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Signatory_Email_HCPTS__c</fullName>
        <defaultValue>&apos;noname@donotreply.com&apos;</defaultValue>
        <label>Entity Signatory Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Signatory_Name_HCPTS__c</fullName>
        <label>Entity Signatory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signer_Sequence__c</fullName>
        <description>Choosing 1 means this Signer receives the e-mail first, 8 means this Signer receives the e-mail last</description>
        <inlineHelpText>Choosing 1 means this Signer receives the e-mail first, 8 means this Signer receives the e-mail last</inlineHelpText>
        <label>Signer Sequence</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signer_Title_HCPTS__c</fullName>
        <label>Signer Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Signer</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Contract Signer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>